--- a/src/assets/color.scss
+++ b/src/assets/color.scss
@@ -1,16 +1,22 @@
+$color-green: green;
+$color-lightcoral: lightcoral;
+$color-lightgray: lightgray;
+$color-lightyellow: lightyellow;
+$color-red: red;
+
 $color-background: #eee;
 $color-bs-info: #5bc0de;
 $color-bs-primary: #337ab7;
 $color-bs-warning: #f0ad4e;
-$color-btn-success: green;
-$color-btn-warning: red;
-$color-can-drop: lightgray;
+$color-btn-success: $color-green;
+$color-btn-warning: $color-red;
+$color-can-drop: $color-lightgray;
 $color-default: #777;
 $color-editable: #fff;
-$color-invalid: lightcoral;
+$color-invalid: $color-lightcoral;
 $color-is-over: #31708f;
 $color-readonly: #ddd;
-$color-required: lightyellow;
+$color-required: $color-lightyellow;
 $color-selected-border: #0dcaf0;
 $color-attention-emphasis: #9a6700;
 $color-halloween: #fe9600;
